crates/wasm-cli/tests/snapshots/test__cli_run_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Execute a Wasm Component

Usage: wasm run [OPTIONS] <INPUT>

Arguments:
  <INPUT>  Local file path, OCI reference, or manifest key (scope:component) for a Wasm Component

Options:
      --env <KEY=VAL>    Pass an environment variable to the guest (repeatable)
      --dir <HOST_PATH>  Pre-open a host directory for the guest (repeatable)
      --inherit-env      Inherit all host environment variables
      --inherit-network  Allow the guest to access the network
      --no-stdio         Suppress stdin/stdout/stderr inheritance
      --listen <ADDR>    Address to bind the HTTP server to when running an `wasi:http/proxy` component (default: `127.0.0.1:8080`) [default: 127.0.0.1:8080]
  -h, --help             Print help
  -V, --version          Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
