crates/wasm-cli/tests/snapshots/test__cli_self_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Configure the `wasm(1)` tool, generate completions, & manage state

Usage: wasm self [OPTIONS] <COMMAND>

Commands:
  state        Print diagnostics about the local state
  config       Show configuration file location and current settings
  log          Show the application log file
  completions  Generate shell completions for the given shell
  man-pages    Generate a man page for the CLI
  clean        Clean up storage (remove all data, images, and metadata)
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
