crates/wasm-cli/tests/snapshots/test__cli_self_log_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Show the application log file

Usage: wasm self log [OPTIONS]

Options:
  -f, --follow         Continuously stream new log lines (like `tail -f`)
  -n, --lines <LINES>  Number of lines to show from the end of the log
  -h, --help           Print help
  -V, --version        Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
