crates/wasm-cli/tests/snapshots/test__install_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Install a dependency from an OCI registry

Usage: wasm install [OPTIONS] [REFERENCE]...

Arguments:
  [REFERENCE]...  The OCI references to install (e.g., ghcr.io/webassembly/wasi-logging:1.0.0 or oci://ghcr.io/webassembly/wasi-logging:1.0.0). If no references are provided, installs all packages listed in the manifest

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
